cmake_minimum_required(VERSION 2.6)
project(Cam)
find_package(OpenCV REQUIRED)
message(STATUS "OpenCV_INCLUDE_DIRS = ${OpenCV_INCLUDE_DIRS}")
message(STATUS "OpenCV_LIBS = ${OpenCV_LIBS}")
include_directories("/home/bcm2835-1.71/src/" "/home/libzmq/include" ${PROJECT_SOURCE_DIR})
LINK_LIBRARIES("/home/bcm2835-1.71/src/libbcm2835.a")
LINK_LIBRARIES( "/home/libzmq/lib/libzmq.so")
add_executable(${PROJECT_NAME} withPic.cpp)
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
